# Inertial_Localization

./: .copilot-instructions.md  .gitignore  .gitmodules  AI_Agent_Instructions.md  B5_implementation_notes.md  CMakeLists.txt  ControlAPI.cpp.deprecated  ControlAPI.hpp.deprecated  Main.cpp  README.md  ahrs_loc_handler.cpp  ahrs_loc_handler.hpp  control_config.json  implementation_notes.md  implementation_notes.md.appendix  localization_config.json  localization_documentation.md  localization_separation_plan.md  preliminary_prompt.txt  task_b5_python_bindings_plan.md  test_localization.sh  vehicle_config.json
Tests/: CMakeLists.txt  ControllerTests.cpp  ControllerTests.cpp.depricated  ControllerTests.hpp  test_AHRS.cpp  test_ahrs_loc_handler.cpp  test_attitude_estimator.cpp  test_gtest_sample.cpp  test_setup.cpp  test_setup.hpp  test_short_term_localization.cpp  test_short_term_localization.cpp.new  test_static_dynamic_test.cpp  testing_strategy.md
Tests/python/: Classes.py  Drive_Analysis_readme.MD  Functions.py  SteeringControlPlotter.py  Stopper.py  aidriver_online_visualizer.py  analyze_cpp_debug_files.py  analyze_localization.py  auto_vehicle_cont.yaml  carpose_offline_calculation.py  compare_python_cpp_results_short_term_localization.py  compare_python_cpp_results_stanley_control.py  create_path_save_to_csv.py  create_splines.py  initialize_python_env.py  longitudinal_offline_analyzer.py  longitudinal_online_analyzer.py  plot_AHRS_results.py  plot_car_and_traj.py  print_input.py  requirements.txt  test_stanley_controller.py  velocity_profile_generator.py
Tests/python/longitudinal_plots_config/: controller_states.json  custom_plots.json  default_plots.json  vehicle_states.json
Tests/python/python_binding/: 1_test_stanley_controller.py  2_system_simulation.py  3_system_simulation_with_delays.py  4_system_simulation_mp_emulation.py  CMakeLists.txt  carpose_offline_calculation.py  control_module.cpp  gyro_bias_estimation_visualization.py  localization_pybind_module.cpp  localization_pybind_test.py  longitudinal_rebuild.sh  longitudinal_sim_cpp_pipeline.py  readme.md  rebuild.sh  static_dynamic_test_visualization.py
Tests/python/python_binding/pybind_utils/: cpp_utils.cpp  cpp_utils.h  pybind11_utils.cpp  pybind11_utils.h
Tests/python/steering_wheel_control_analysis_scripts/: analyze_steering_wheel_test.py  analyze_steering_wheel_test_pid.py  analyze_steering_wheel_test_plant.py  analyze_steering_wheel_test_plant_step.py  controller_design.py  parse_canbus_dump.py  rate_test.py  visualize_angle_VS_rate.py
Utils/: AHRS.cpp  AHRS.hpp  CMakeLists.txt  Classes.cpp  Classes.hpp  Controllers.cpp  Controllers.hpp  DataHandling.cpp  DataHandling.hpp  Delay.hpp  Functions.cpp  Functions.hpp  GyroBiasStaticEstimator.hpp  Old_Controllers.cpp  Sensors.hpp  SpeedEstimators.cpp  SpeedEstimators.hpp  StaticDynamicTest.cpp  StaticDynamicTest.hpp  control_debug_states.cpp  control_debug_states.hpp  localization_debug_states.cpp  localization_debug_states.hpp  short_term_localization.cpp  short_term_localization.hpp  units.hpp
data/backed_data_files/: shiba_traj_splines.csv
data/backed_data_files/2023-06-13-T11_48_22/: brake.csv  speed.csv  steering.csv
data/backed_data_files/2025-05-21T11_52_50/: rear_right_wheel_speed.csv  steering.csv
data/velocity_profiles/segmented_profile/: profile.csv
resources/diagram_source_files/: steering_control_architecture.txt  steering_control_architecure.vsdx
src/inertial_localization_api/: ahrs_loc_handler.cpp  ahrs_loc_handler.h
src/inertial_localization_api/utils/: attitude_estimator.cpp  attitude_estimator.h  classes.cpp  classes.h  data_handling.cpp  data_handling.h  functions.cpp  functions.h  localization_debugger.cpp  localization_debugger.h  sensor_types.h  short_term_localization.cpp  short_term_localization.h  speed_estimator.cpp  speed_estimator.h  units.h
src/inertial_localization_api/wrapper/: localization_api_wrapper.cpp  localization_api_wrapper.h
standalone/: dev_install.sh  format_code.sh  run_lint.sh
test_package/: CMakeLists.txt
test_package/inertial_localization_api/: test_ahrs.cpp  test_ahrs_loc_handler.cpp  test_localization.sh  test_setup.cpp  test_setup.h  test_short_term_localization.cpp  testing_strategy.md
test_package/inertial_localization_api/python/: .gitignore  plot_ahrs_results.py  plot_inputs.py
test_package/inertial_localization_api/python/python_binding/: carpose_offline_calculation.py  localization_pybind_module.cpp  localization_pybind_test.py  readme.md
test_package/inertial_localization_api/python/python_binding/pybind_utils/: CPPLINT.cfg  cpp_utils.cpp  cpp_utils.h  pybind11_utils.cpp  pybind11_utils.h
test_package/resources/data/backed_data_files/2025-05-21T11_52_50/: car_pose_2025-07-29T10_57_55.csv  rear_left_wheel_speed.csv  speed.csv
wrapper/: CMakeLists.txt  control_api_wrapper.cpp  control_api_wrapper.h  localization_api_wrapper.cpp  localization_api_wrapper.h
